feat: add header info contacts and name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 <body>
     <div class="wrapper">
         <header class="header">
-
+            <div class="person">
+                <div class="portrait">
+                    <img src="./portrait.jpg" alt="portrait">
+                </div>
+                <div class="name">
+                    <h1>Anastasiya Nadtachayeva</h1>
+                    <h2>Junior Front-End Developer</h2>
+                </div>
+            </div>
+            <div class="header-contacts">
+                <a href="tel:+375447445066">+375447445066</a>
+                <a href="mailto:nadtochayeva.anastasiya@gmail.com">nadtochayeva.anastasiya@gmail.com</a>
+                <a href="https://github.com/Nasta21">Nadtochayeva Anastasiya on Github</a>
+            </div>
         </header>
         <main class="main">
 
