--- a/index.html
+++ b/index.html
@@ -19,14 +19,40 @@
                     <h2>Junior Front-End Developer</h2>
                 </div>
             </div>
-            <div class="header-contacts">
-                <a href="tel:+375447445066">+375447445066</a>
-                <a href="mailto:nadtochayeva.anastasiya@gmail.com">nadtochayeva.anastasiya@gmail.com</a>
-                <a href="https://github.com/Nasta21">Nadtochayeva Anastasiya on Github</a>
-            </div>
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="" class="nav-link"></a></li>
+                    <li class="nav-item"><a href="" class="nav-link"></a></li>
+                    <li class="nav-item"><a href="" class="nav-link"></a></li>
+                    <li class="nav-item"><a href="" class="nav-link"></a></li>
+                    <li class="nav-item"><a href="" class="nav-link"></a></li>
+                    <li class="nav-item"><a href="" class="nav-link"></a></li>
+                    <li class="nav-item"><a href="" class="nav-link"></a></li>
+                    <li class="nav-item"><a href="" class="nav-link"></a></li>
+                </ul>
+            </nav>
         </header>
         <main class="main">
-
+            <section class="about-me"></section>
+            <section class="edu"></section>
+            <section class="contacts">
+                <ul class="contacts-list">
+                    <li class="contacts-item"><a href="tel:+375447445066">+375447445066</a></li>
+                    <li class="contacts-item"><a href="mailto:nadtochayeva.anastasiya@gmail.com">nadtochayeva.anastasiya@gmail.com</a></li>
+                    <li class="contacts-item"><a href="https://github.com/Nasta21">Nadtochayeva Anastasiya on Github</a></li>
+                </ul>
+            </section>
+            <section class="skills">
+                <ul class="skills-list">
+                    <li class="skills-item"></li>
+                    <li class="skills-item"></li>
+                    <li class="skills-item"></li>
+                    <li class="skills-item"></li>
+                </ul>
+            </section>
+            <section class="english"></section>
+            <section class="code"></section>
+            <section class="experience"></section>
         </main>
         <footer class="footer">
 
