refactor: add id to sections and add projects

--- a/index.html
+++ b/index.html
@@ -21,28 +21,29 @@
             </div>
             <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="" class="nav-link"></a></li>
-                    <li class="nav-item"><a href="" class="nav-link"></a></li>
-                    <li class="nav-item"><a href="" class="nav-link"></a></li>
-                    <li class="nav-item"><a href="" class="nav-link"></a></li>
-                    <li class="nav-item"><a href="" class="nav-link"></a></li>
-                    <li class="nav-item"><a href="" class="nav-link"></a></li>
-                    <li class="nav-item"><a href="" class="nav-link"></a></li>
+                    <li class="nav-item"><a href="#about-me" class="nav-link">About me</a></li>
+                    <li class="nav-item"><a href="#edu" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+                    <li class="nav-item"><a href="#code" class="nav-link">Code example</a></li>
+                    <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                     <li class="nav-item"><a href="" class="nav-link"></a></li>
                 </ul>
             </nav>
         </header>
         <main class="main">
-            <section class="about-me"></section>
-            <section class="edu"></section>
-            <section class="contacts">
+            <section class="about-me" id="about-me"></section>
+            <section class="edu" id="edu"></section>
+            <section class="contacts" id="contacts">
                 <ul class="contacts-list">
-                    <li class="contacts-item"><a href="tel:+375447445066">+375447445066</a></li>
-                    <li class="contacts-item"><a href="mailto:nadtochayeva.anastasiya@gmail.com">nadtochayeva.anastasiya@gmail.com</a></li>
+                    <li class="contacts-item">Phone: <a href="tel:+375447445066">+375447445066</a></li>
+                    <li class="contacts-item">Email: <a href="mailto:nadtochayeva.anastasiya@gmail.com">nadtochayeva.anastasiya@gmail.com</a></li>
                     <li class="contacts-item"><a href="https://github.com/Nasta21">Nadtochayeva Anastasiya on Github</a></li>
+                    <li class="contacts-item">Discord Anastasiya#2927</li>
                 </ul>
             </section>
-            <section class="skills">
+            <section class="skills" id="skills">
                 <ul class="skills-list">
                     <li class="skills-item"></li>
                     <li class="skills-item"></li>
@@ -50,9 +51,14 @@
                     <li class="skills-item"></li>
                 </ul>
             </section>
-            <section class="english"></section>
-            <section class="code"></section>
-            <section class="experience"></section>
+            <section class="english" id="english"></section>
+            <section class="code" id="code"></section>
+            <section class="projects" id="projects">
+                <ul class="projects-list">
+                    <li><a href="https://nasta21.github.io/rsschool-cv/cv">CV (Markdown)</a></li>
+                    <li><a href="https://nasta21.github.io/rsschool-cv/">CV (HTML)</a></li>
+                </ul>
+            </section>
         </main>
         <footer class="footer">
 
