feat: add footer content

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
             </section>
         </main>
         <footer class="footer">
-
+            <a href="https://github.com/Nasta21">Github</a>
+            <p>2022</p>
+            <a href="https://rs.school/js/"><img src="./logo.svg" alt="logo"></a>
         </footer>
     </div>
 </body>
