refactor: about info

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Nadtachayeva Anastasiya</title>
 </head>
 <body>
-    <div class="wrapper">
+    <!--div class="wrapper"-->
         <header class="header">
             <div class="person">
                 <div class="portrait">
-                    <img src="./portrait.jpg" alt="portrait">
+                    <img src="./portrait.jpg" alt="portrait" width="150px">
                 </div>
                 <div class="name">
                     <h1>Anastasiya Nadtachayeva</h1>
@@ -28,14 +28,15 @@
                     <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
                     <li class="nav-item"><a href="#code" class="nav-link">Code example</a></li>
                     <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-                    <li class="nav-item"><a href="" class="nav-link"></a></li>
                 </ul>
             </nav>
         </header>
         <main class="main">
             <section class="about-me" id="about-me">
                 <h2>About me</h2>
-                <p>blabalbla</p>
+                <p>I don't have work experience in IT, but <br>this area is like an ocean of knowledge,
+                     that inspires and <br>encourages aspiration to get it's secrets and become a Master of a sea.
+                </p>
             </section>
             <section class="edu" id="edu">
                 <h2>Education</h2>
@@ -95,8 +96,8 @@
         <footer class="footer">
             <a href="https://github.com/Nasta21">Github</a>
             <p>2022</p>
-            <a href="https://rs.school/js/"><img src="./logo.svg" alt="logo"></a>
+            <a href="https://rs.school/js/"><img src="./logo.svg" alt="logo" width="75px"></a>
         </footer>
-    </div>
+    <!--/div-->
 </body>
 </html>
