--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </nav>
         </header>
         <main class="main">
+            <div class="first-column">
             <section class="about-me" id="about-me">
                 <h2>About me</h2>
                 <p>I don't have work experience in IT, but <br>this area is like an ocean of knowledge,
@@ -47,16 +48,7 @@
                     <li><a href="https://ru.code-basics.com/languages/javascript">JavaScript for beginners from Hexlet</a></li>
                 </ul>
                 <h3>Higher education</h3>
-                <p>BELARUSIAN STATE PEDAGOGICAL UNIVERSITY NAMED AFTER MAXIM TANK<br>Faculty of Psychology</p>
-            </section>
-            <section class="contacts" id="contacts">
-                <h2>Contacts</h2>
-                <ul class="contacts-list">
-                    <li class="contacts-item">Phone: <a href="tel:+375447445066">+375447445066</a></li>
-                    <li class="contacts-item">Email: <a href="mailto:nadtochayeva.anastasiya@gmail.com">nadtochayeva.anastasiya@gmail.com</a></li>
-                    <li class="contacts-item">Nadtochayeva Anastasiya<a href="https://github.com/Nasta21"> on Github</a></li>
-                    <li class="contacts-item">Discord Anastasiya#2927</li>
-                </ul>
+                <p>BELARUSIAN STATE PEDAGOGICAL UNIVERSITY<br>NAMED AFTER MAXIM TANK<br>Faculty of Psychology</p>
             </section>
             <section class="skills" id="skills">
                 <h2>Skills</h2>
@@ -67,6 +59,17 @@
                     <li class="skills-item">SQL (in progress)</li>
                 </ul>
             </section>
+            </div>
+            <div class="second-column">
+            <section class="contacts" id="contacts">
+                <h2>Contacts</h2>
+                <ul class="contacts-list">
+                    <li class="contacts-item">Phone: <a href="tel:+375447445066">+375447445066</a></li>
+                    <li class="contacts-item">Email: <a href="mailto:nadtochayeva.anastasiya@gmail.com">nadtochayeva.anastasiya@gmail.com</a></li>
+                    <li class="contacts-item">Nadtochayeva Anastasiya<a href="https://github.com/Nasta21"> on Github</a></li>
+                    <li class="contacts-item">Discord Anastasiya#2927</li>
+                </ul>
+            </section>
             <section class="english" id="english">
                 <h2>English</h2>
                 <p>English level B1 - Pre-Intermediate</p>
@@ -74,15 +77,15 @@
             <section class="code" id="code">
                 <h2>Code example</h2>
                 <pre>
-                    function sumDigits(number) {
-                    let arr = Array.from((Math.abs(number)).toString(), Number);
-                    let sum = 0;
-                        arr.forEach(function(item){
-                  sum += item;
-                        }
-                      )
-                      return sum;
-                  }
+    function sumDigits(number) {
+        let arr = Array.from((Math.abs(number)).toString(), Number);
+        let sum = 0;
+        arr.forEach(function(item){
+            sum += item;
+           }
+          )
+          return sum;
+        }
                 </pre>
             </section>
             <section class="projects" id="projects">
@@ -92,6 +95,7 @@
                     <li><a href="https://nasta21.github.io/rsschool-cv/">CV (HTML)</a></li>
                 </ul>
             </section>
+           </div>
         </main>
         <footer class="footer">
             <a href="https://github.com/Nasta21">Github</a>
