--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header class="header">
             <div class="person">
                 <div class="portrait">
-                    <img src="./portrait.jpg" alt="portrait" width="150px">
+                    <img src="./portrait.jpg" alt="portrait" width="150">
                 </div>
                 <div class="name">
                     <h1>Anastasiya Nadtachayeva</h1>
@@ -100,7 +100,7 @@
         <footer class="footer">
             <a href="https://github.com/Nasta21">Github</a>
             <p>2022</p>
-            <a href="https://rs.school/js/"><img src="./logo.svg" alt="logo" width="75px"></a>
+            <a href="https://rs.school/js/"><img src="./logo.svg" alt="logo" width="75"></a>
         </footer>
     <!--/div-->
 </body>
